updated-netflix-page

--- a/netflix-landingpage-clone/index.html
+++ b/netflix-landingpage-clone/index.html
@@ -128,75 +128,100 @@
         <div class="story-sss">
           <h1>Sıkça Sorulan Sorular</h1>
           <div class="dropdowns">
+            <input class="dd-menu-input" type="checkbox" id="dd-menu-1" />
             <label for="dd-menu-1" class="dropdown-menu">
               <h1>Netflix nedir?</h1>
               <i class="plus-icon">+</i>
             </label>
-            <input class="dd-menu-input" type="checkbox" id="dd-menu-1" />
             <div class="dropdown-content">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
-              illum nemo sapiente odio rerum, enim magnam architecto eius quae
-              ut neque quasi consectetur distinctio alias quis modi iste animi
-              corrupti? Quae quisquam saepe facere temporibus, eius mollitia
-              distinctio sed sunt accusamus voluptatem in ipsa ex soluta!
-              Similique impedit, ipsam quasi nemo ea officia nam odio quis alias
-              asperiores labore aspernatur! Similique reprehenderit provident
-              totam? Quaerat commodi doloremque, aspernatur enim assumenda
-              facere animi a ea praesentium? Asperiores totam eaque, fuga
-              laudantium vitae a facilis cupiditate placeat modi natus quos
-              quisquam excepturi. Quidem amet saepe molestias, tenetur doloribus
-              nisi eligendi rerum? Reprehenderit eaque voluptate consequuntur
-              minima. Eius aperiam nisi, facere quasi amet expedita nemo
-              sapiente, accusantium quaerat dicta magnam minus consectetur
-              dolorem? Repellendus necessitatibus ipsa itaque qui illo aut,
-              similique exercitationem. Inventore nemo praesentium eum rem, ab
-              earum, iste a asperiores illo error commodi cum sint dolore dolor
-              vel odio cumque. Quasi. Voluptatum eos labore autem. Nulla labore
-              nesciunt odio consequuntur molestias libero dolores facilis
-              consectetur. Commodi porro possimus, impedit tempore cumque iste
-              totam quisquam pariatur consequuntur ipsa est quibusdam aliquid
-              earum! Tenetur dicta, nam molestias ratione impedit architecto.
-              Excepturi dolorum, ab repellendus nesciunt, ex ut dignissimos, a
-              molestias nihil in dolore debitis similique porro. Aut aspernatur
-              eum quisquam, optio eveniet ut? Molestias consequatur, numquam
-              nesciunt iusto quaerat, harum itaque similique omnis, quidem
-              mollitia quos beatae? Quibusdam error fugiat quam vel voluptatum
-              laborum voluptas incidunt quae iusto? Deleniti praesentium
-              necessitatibus obcaecati repellendus? Quas possimus, est odio ipsa
-              dolores ipsam voluptatem eaque modi, accusantium fuga suscipit
-              similique velit. Cupiditate distinctio reprehenderit quod quae
-              eaque delectus exercitationem hic fuga enim dicta. Unde, quam
-              suscipit? Velit inventore dolore consequuntur laboriosam nisi
-              aspernatur ea quis, vero officia odit tempora harum! Quia
-              voluptatem voluptas cum accusamus itaque natus nesciunt
-              repudiandae voluptatibus. Neque dolor quas odit quos id?
+              <p>
+                Netflix; internet bağlantılı binlerce cihazda ödüllü diziler,
+                filmler, animeler, belgeseller ve daha fazlasını içeren geniş
+                bir arşiv sunan bir yayın hizmetidir.
+              </p>
+              <p>
+                Tek bir reklam olmadan, istediğiniz kadar, istediğiniz zaman
+                izleyebilirsiniz - hepsi aylık düşük bir ücret karşılığında. Her
+                zaman keşfedilecek yeni bir şeyler var, üstelik her hafta yeni
+                diziler ve filmler ekleniyor!
+              </p>
             </div>
+            <input class="dd-menu-input" type="checkbox" id="dd-menu-2" />
             <label for="dd-menu-2" class="dropdown-menu">
               <h1>Netflix'in Maliyeti Nedir?</h1>
               <i class="plus-icon">+</i>
             </label>
-            <input class="dd-menu-input" type="checkbox" id="dd-menu-2" />
             <div class="dropdown-content">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum
-              nisi maiores animi molestiae fugiat, maxime architecto hic odit?
-              Sed iusto laboriosam nemo voluptates dolorum aperiam explicabo
-              nulla. Dolorem, possimus error?
+              <p>
+                Netflix'i akıllı telefonunuz, tabletiniz, Akıllı TV'niz, dizüstü
+                bilgisayarınız veya yayın cihazınızda sabit bir aylık ücretle
+                izleyin. Aylık plan ücretleri 37,99 TL ile 77,99 TL arasında
+                değişmektedir. Ekstra maliyet yok, sözleşme yok.
+              </p>
             </div>
-            <div class="dropdown-menu">
+            <input class="dd-menu-input" type="checkbox" id="dd-menu-3" />
+            <label for="dd-menu-3" class="dropdown-menu">
               <h1>Nerede izleyebilirim?</h1>
               <i class="plus-icon">+</i>
+            </label>
+            <div class="dropdown-content">
+              <p>
+                Netflix'i akıllı telefonunuz, tabletiniz, Akıllı TV'niz, dizüstü
+                bilgisayarınız veya yayın cihazınızda sabit bir aylık ücretle
+                izleyin. Aylık plan ücretleri 37,99 TL ile 77,99 TL arasında
+                değişmektedir. Ekstra maliyet yok, sözleşme yok.
+              </p>
             </div>
-            <div class="dropdown-menu">
+            <input class="dd-menu-input" type="checkbox" id="dd-menu-4" />
+            <label for="dd-menu-4" class="dropdown-menu">
               <h1>Nasıl iptal ederim?</h1>
               <i class="plus-icon">+</i>
+            </label>
+            <div class="dropdown-content">
+              <p>
+                İstediğiniz yerde, istediğiniz zaman izleyin. Bilgisayarınızda
+                netflix.com adresinden veya akıllı TV'ler, akıllı telefonlar,
+                tabletler, medya oynatıcılar ve oyun konsolları dahil Netflix
+                uygulamasını sunan, internet bağlantılı herhangi bir cihazda
+                anında izlemek için Netflix hesabınızla oturum açın.
+              </p>
+              <p>
+                Favori içeriklerinizi iOS, Android veya Windows 10 uygulamasıyla
+                da indirebilirsiniz. Seyahatteyken ve internet bağlantısı
+                olmadan izlemek için indirilenleri kullanın. Netflix'i her yere
+                beraberinizde götürün.
+              </p>
             </div>
-            <div class="dropdown-menu">
+            <input class="dd-menu-input" type="checkbox" id="dd-menu-5" />
+            <label for="dd-menu-5" class="dropdown-menu">
               <h1>Netflix'te ne izleyebilirim?</h1>
               <i class="plus-icon">+</i>
+            </label>
+            <div class="dropdown-content">
+              <p>
+                Netflix esnektir. Sinir bozucu hiçbir sözleşme ve taahhüt
+                yoktur. Hesabınızı çevrimiçi olarak iki tıklamayla kolayca iptal
+                edebilirsiniz. İptal ücreti yoktur - hesabınızı istediğiniz
+                zaman başlatın veya durdurun.
+              </p>
             </div>
-            <div class="dropdown-menu">
+            <input class="dd-menu-input" type="checkbox" id="dd-menu-6" />
+            <label for="dd-menu-6" class="dropdown-menu">
               <h1>Netflix çocuklar için uygun mudur?</h1>
               <i class="plus-icon">+</i>
+            </label>
+            <div class="dropdown-content">
+              <p>
+                Üyeliğinize dâhil olan Netflix Çocuk deneyimi, çocukların ailece
+                izlenebilecek dizi ve filmleri kendilerine özel bir alanda
+                izlemelerini sağlarken kontrolü ebeveynlere verir.
+              </p>
+              <p>
+                Çocuk profillerinde bulunan PIN korumalı ebeveyn kontrolleri
+                sayesinde, çocukların izleyebileceği içeriklerin yetişkinlik
+                düzeylerini kısıtlayabilir ve onların görmesini istemediğiniz
+                belirli içerikleri engelleyebilirsiniz.
+              </p>
             </div>
           </div>
           <form class="main-form">
@@ -218,10 +243,12 @@
       <footer class="story-border">
         <div class="area">
           <h4>Sorularınız mı var? 0850-390-744 numaralı telefonu arayın</h4>
-          <div class="list-area">
-            <a href="">SS</a><a href="">SS</a><a href="">SS</a> <a href="">SS</a
-            ><a href="">SS</a> <a href="">SS</a><a href="">SS</a
-            ><a href="">SS</a><a href="">SS</a><a href="">SS</a><a href="">SS</a
+          <div class="area-links">
+            <a href="">SSS</a><a href="">Yardım Merkezi</a><a href="">Hesap</a>
+            <a href="">Medya Merkezi</a><a href="">Yatırımcı İlişkileri</a>
+            <a href="">İş İmknaları</a>
+            <a href="">Hediye Kart Kullan</a><a href="">izleme Yolları</a
+            ><a href="">Kullanım Koşulları</a><a href="">SS</a><a href="">SS</a
             ><a href="">SS</a><a href="">SS</a><a href="">SS</a><a href="">SS</a
             ><a href="">SS</a>
           </div>
