updated-netflix-page

--- a/netflix-landingpage-clone/index.html
+++ b/netflix-landingpage-clone/index.html
@@ -242,16 +242,38 @@
       </div>
       <footer class="story-border">
         <div class="area">
-          <h4>Sorularınız mı var? 0850-390-744 numaralı telefonu arayın</h4>
-          <div class="area-links">
-            <a href="">SSS</a><a href="">Yardım Merkezi</a><a href="">Hesap</a>
-            <a href="">Medya Merkezi</a><a href="">Yatırımcı İlişkileri</a>
-            <a href="">İş İmknaları</a>
-            <a href="">Hediye Kart Kullan</a><a href="">izleme Yolları</a
-            ><a href="">Kullanım Koşulları</a><a href="">SS</a><a href="">SS</a
-            ><a href="">SS</a><a href="">SS</a><a href="">SS</a><a href="">SS</a
-            ><a href="">SS</a>
+          <h4>
+            Sorularınız mı var?
+            <span class="footer-phone"> 0850-390-7444 </span>numaralı telefonu
+            arayın
+          </h4>
+          <ul class="area-links">
+            <li><a href="">SSS</a></li>
+            <li><a href="">Yardım Merkezi</a></li>
+            <li><a href="">Hesap</a></li>
+            <li><a href="">Medya Merkezi</a></li>
+            <li><a href="">Yatırımcı İlişkileri</a></li>
+            <li><a href="">İş İmkanları</a></li>
+            <li><a href="">Hediye Kart Kullan</a></li>
+            <li><a href="">izleme Yolları</a></li>
+            <li><a href="">Kullanım Koşulları</a></li>
+            <li><a href="">Gizlilik</a></li>
+            <li><a href="">Çerez Tercihleri</a></li>
+            <li><a href="">Kurumsal Bilgiler</a></li>
+            <li><a href="">Bize Ulaşın</a></li>
+            <li><a href="">Hız Testi</a></li>
+            <li><a href="">Yasal Hükümler</a></li>
+            <li><a href="">Sadece Netflix'te</a></li>
+          </ul>
+          <div class="footer-language">
+            <div class="language">
+              <select id="language">
+                <option selected value="tr">Türkçe</option>
+                <option value="en">English</option>
+              </select>
+            </div>
           </div>
+          <span>Netflix Türkiye</span>
         </div>
       </footer>
     </div>
