netflix-final-commit

--- a/netflix-landingpage-clone/index.html
+++ b/netflix-landingpage-clone/index.html
@@ -37,7 +37,7 @@
 
           <form class="main-form">
             <h4>
-              İzlemeye hazır mısınız? Üyelik Oluşturmak veya üyeliğinize ulaşmak
+              İzlemeye hazır mısınız? Üyelik oluşturmak veya üyeliğinize ulaşmak
               için e-posta adresinizi girin.
             </h4>
             <div class="form-btn">
